force-app/main/default/objects/Google_Analytics__c/Google_Analytics__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Google Analytics</label>
</CustomObject>