force-app/main/default/objects/Google_Analytics__c/fields/Analytics_End_Point_URL__c.field-meta.xml
<CustomField>
    <fullName>Analytics_End_Point_URL__c</fullName>
    <label>Analytics End Point URL</label>
    <type>Url</type>
</CustomField>