force-app/main/default/objects/Google_Analytics__c/fields/Analytics_Id__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Id__c</fullName>
    <label>Analytics Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>