force-app/main/default/objects/Google_Analytics__c/fields/client_Secret__c.field-meta.xml
<CustomField>
    <fullName>client_Secret__c</fullName>
    <label>client Secret</label>
    <length>60</length>
    <type>Text</type>
</CustomField>