force-app/main/default/objects/Google_Analytics__c/fields/metrics__c.field-meta.xml
<CustomField>
    <fullName>metrics__c</fullName>
    <label>metrics</label>
    <length>160</length>
    <type>Text</type>
</CustomField>