force-app/main/default/objects/Google_Analytics__c/fields/refreshToken__c.field-meta.xml
<CustomField>
    <fullName>refreshToken__c</fullName>
    <label>refreshToken</label>
    <length>160</length>
    <type>Text</type>
</CustomField>