force-app/main/default/objects/Google_Analytics__c/fields/Token_End_Point_URL__c.field-meta.xml
<CustomField>
    <fullName>Token_End_Point_URL__c</fullName>
    <label>Token End Point URL</label>
    <type>Url</type>
</CustomField>